Infrastructure/Test/mongodb/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths: 
      - backend:
          serviceName: mondo-express-service
          servicePort: 8081
