Infrastructure/Test/mongodb/mongo-express.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mongodb-configmap
data: 
  database_url: mongodb-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
        env:
        - name: ME_CONFIG_MONGODB_ADMINUSERNAME
          valueFrom:
            secretKeyRef: 
              name: mongodb-secret
              key: mongo-root-uesrname
        - name: ME_CONFIG_MONGODB_ADMINPASSWORD
          valueFrom:
            secretKeyRef: 
              name: mongodb-secret
              key: mongo-root-password 
        - name: ME_CONFIG_MONGODB_SERVER
          valueFrom:
            configMapKeyRef: 
              name: mongodb-configmap
              key: database_url 
#status

---
apiVersion: v1
kind: Service
metadata:
  name: mondo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30000
